# active-inference

./: LICENSE  README.md  pyproject.toml
scripts/: smoke_taxi.py
src/aiflab/: __init__.py
src/aiflab/cli/: train.py
src/aiflab/core/: __init__.py  dataclasses.py  exceptions.py  interfaces.py  registry.py
src/aiflab/domains/taxi/: __init__.py  env.py  factorization.py  observations.py  rewards.py  specs.py  transitions.py
src/aiflab/utils/: paths.py
src/ainlab/cli/: train.py
src/ainlab/core/: types.py
src/ainlab/utils/: logging.py  seeds.py
tests/integration/: test_experiment_runner.py
tests/unit/core/: test_dataclasses.py
tests/unit/domains/: test_taxi_factorization.py  test_taxi_observations.py  test_taxi_specs.py  test_taxi_transitions.py
